fix: change side0menu container overflow setting

--- a/src/modules/header/header.scss
+++ b/src/modules/header/header.scss
@@ -141,7 +141,7 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding-top: 100px;
 
     .side-menu-nav {
